deb#749592 mysql-connector doesn't work with remote connections

and also
fdo#77584 mysql-connector doesn't work over SSH tunnel

Not sure exactly how this got broken, I suspect that the UI code
has started unconditionally passing down the properties, just filling
them with empty spaces for the unused ones.

Anyhow, this appears to fix the problem.

Cherry-picked from 6b50e21473e7d2b24b5c609d8a1c31f27644d842

Change-Id: I7ac2a0d6bae610f47d2a28daa9beb3ef0e2dbb52
Reviewed-on: https://gerrit.libreoffice.org/9565
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>